# vantaviewer

./: .SRCINFO  .gitignore  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  ROADMAP.md  config.default.jsonc  install-user.sh  keybindings.default.jsonc  resources.qrc  vantaviewer.desktop
icons/: icons.qrc
shaders/: fullscreen.vert  image.frag  overlay.frag  overlay.vert
src/: cm_tagging.cpp  cm_tagging.h  config.cpp  config.h  crop_overlay.cpp  crop_overlay.h  crop_state.cpp  crop_state.h  hdr_image.cpp  hdr_image.h  hdr_monitor.cpp  hdr_monitor.h  image_encoder.cpp  image_encoder.h  image_loader.cpp  image_loader.h  image_ops.cpp  image_ops.h  info_overlay.cpp  info_overlay.h  keybindings.cpp  keybindings.h  main.cpp  playlist.cpp  playlist.h  view_transform.cpp  view_transform.h  viewer_window.cpp  viewer_window.h
